# pf-rerole

./: .gitignore  LICENSE  readme.md
docs/: versioning_philosophy.md
docs/architecture/: adr_000.md  adr_001.md  adr_002.md  adr_003.md  adr_004.md
rerole/: pyproject.toml  readme.md
rerole-lib/: pyproject.toml  readme.md
rerole-lib/rerole_lib/: ability.py  bonus.py  character.py  effect.py  save.py  skill.py  utils.py
rerole-lib/tests/ability/: test_ability.py
rerole-lib/tests/bonus/: test_bonus.py
rerole-lib/tests/character/: test_character.py  test_data.json
rerole-lib/tests/effect/: test_effect.py
rerole-lib/tests/io/: test_data.json
rerole-lib/tests/save/: test_save.py
rerole-lib/tests/skill/: test_skill.py
rerole-lib/tests/utils/: test_utils.py
rerole.app/: pyproject.toml  readme.md
rerole.app/rerole_app/: api.py  app.py  db.py  site.py  test_data.json
rerole.app/rerole_app/static/: index.js  rerole.js  styles.css
rerole.app/rerole_app/templates/: character.html  index.html  login.html
rerole/rerole/: __main__.py  lib.py
