[tool.poetry]
name = "rerole-lib"
version = "0.0.0"
description = ""
authors = ["Matt Hale <matthew.hale@protonmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
