[tool.poetry]
name = "rerole-app"
version = "0.0.0"
description = ""
authors = ["Matt Hale <matthew.hale@protonmail.com>"]
readme = "readme.md"
packages = [{include = "rerole"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
