[tool.poetry]
name = "rerole-app"
version = "0.0.0"
description = ""
authors = ["Matt Hale <matthew.hale@protonmail.com>"]
readme = "readme.md"
packages = [{include = "rerole_app"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.3"
rerole-lib = "0.7.0"
requests = "2.32.3"
bcrypt = "4.2.0"
pyjwt = "2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
